--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     },
     "homepage": "https://github.com/SokolovAlex/hangar#readme",
     "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "cookie-parser": "^1.3.4",
         "body-parser": "^1.15.2",
-        "bootbox": "^4.4.0",
-        "crypto": "0.0.3",
         "express": "^4.14.0",
         "express-fileupload": "*",
         "express-session": "^1.14.0",
@@ -29,7 +29,8 @@
         "lodash": "^4.15.0",
         "moment": "^2.14.1",
         "nodemailer": "*",
-        "passport": "*",
+        "passport": "^0.2.1",
+        "passport-google-oauth": "^0.2.0",
         "webpack": "*"
     },
     "devDependencies": {
