--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-    "name": "hangar",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/SokolovAlex/hangar/issues"
-    },
-    "homepage": "https://github.com/SokolovAlex/hangar#readme",
-    "dependencies": {
-        "bcrypt-nodejs": "0.0.3",
-        "cookie-parser": "^1.3.4",
-        "body-parser": "^1.15.2",
-        "express": "^4.14.0",
-        "express-fileupload": "*",
-        "express-session": "^1.14.0",
-        "font-awesome": "^4.6.3",
-        "gulp-concat": "^2.6.0",
-        "gulp-express": "^0.3.5",
-        "gulp-jade": "^1.1.0",
-        "html5shiv": "^3.7.3",
-        "jquery": "*",
-        "js-cookie": "^2.1.3",
-        "jugglingdb": "*",
-        "lodash": "^4.15.0",
-        "moment": "^2.14.1",
-        "nodemailer": "*",
-        "passport": "^0.2.1",
-        "passport-google-oauth": "^0.2.0",
-        "webpack": "*"
-    },
-    "devDependencies": {
-        "babel-loader": "*",
-        "babel-plugin-transform-runtime": "^6.9.0",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-es2015-riot": "^1.1.0",
-        "browser-sync": "^2.14.0",
-        "cookie-parser": "^1.4.3",
-        "cookies-js": "^1.2.2",
-        "gulp": "^3.9.1",
-        "gulp-concat": "^2.6.0",
-        "gulp-express": "^0.3.5",
-        "gulp-if": "^2.0.1",
-        "gulp-jade": "^1.1.0",
-        "gulp-less": "^3.1.0",
-        "gulp-load-plugins": "^1.2.4",
-        "gulp-newer": "^1.2.0",
-        "gulp-remember": "^0.3.1",
-        "gulp-rimraf": "^0.2.0",
-        "gulp-riot": "*",
-        "gulp-sourcemaps": "*",
-        "gulp-uglify": "*",
-        "less": "^2.7.1",
-        "riot": "*",
-        "riotjs-loader": "*",
-        "vinyl-named": "^1.1.0",
-        "webpack-stream": "^3.2.0",
-        "yargs": "*"
-    }
+  "name": "hangar",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SokolovAlex/hangar/issues"
+  },
+  "homepage": "https://github.com/SokolovAlex/hangar#readme",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.3.4",
+    "express": "^4.14.0",
+    "express-fileupload": "*",
+    "express-session": "^1.14.0",
+    "font-awesome": "^4.6.3",
+    "gulp-concat": "^2.6.0",
+    "gulp-express": "^0.3.5",
+    "gulp-jade": "^1.1.0",
+    "html5shiv": "^3.7.3",
+    "jquery": "*",
+    "js-cookie": "^2.1.3",
+    "jugglingdb": "*",
+    "lodash": "^4.15.0",
+    "moment": "^2.14.1",
+    "nodemailer": "*",
+    "passport": "^0.2.1",
+    "passport-google-oauth": "^0.2.0",
+    "superagent": "^3.5.2",
+    "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-loader": "*",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-riot": "^1.1.0",
+    "browser-sync": "^2.14.0",
+    "cookie-parser": "^1.4.3",
+    "cookies-js": "^1.2.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-express": "^0.3.5",
+    "gulp-if": "^2.0.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.1.0",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.2.0",
+    "gulp-remember": "^0.3.1",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-riot": "*",
+    "gulp-sourcemaps": "*",
+    "gulp-uglify": "*",
+    "less": "^2.7.1",
+    "riot": "*",
+    "riotjs-loader": "*",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^3.2.0",
+    "yargs": "*"
+  }
 }
