--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "jquery": "*",
     "js-cookie": "^2.1.3",
     "jugglingdb": "*",
+    "jugglingdb-mysql": "^0.2.3",
     "lodash": "^4.15.0",
-    "moment": "^2.14.1",
+    "moment": "^2.18.1",
     "nodemailer": "*",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.2.0",
